--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   gap: ^3.0.1
   flutter_form_builder: ^9.1.1
   form_builder_validators: ^9.1.0
+  flutter_riverpod: ^2.4.9
+  flutter_svg: ^2.0.9
 
 
 dev_dependencies:
@@ -32,6 +34,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/pngs/
+    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
