--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   form_builder_validators: ^9.1.0
   flutter_riverpod: ^2.4.9
   flutter_svg: ^2.0.9
+  image_picker: ^1.0.7
 
 
 dev_dependencies:
