--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,15 @@ dependencies:
   gap: ^3.0.1
   flutter_form_builder: ^9.1.1
   form_builder_validators: ^9.1.0
+  hive_flutter: ^1.1.0
   flutter_riverpod: ^2.4.9
   flutter_svg: ^2.0.9
   image_picker: ^1.0.7
+  dio: ^5.4.0
+  pretty_dio_logger: ^1.3.1
+  sqflite: ^2.3.1
+  path_provider: ^2.1.2
+  intl: ^0.18.1
 
 
 dev_dependencies:
